## Process this file through Automake to create Makefile.in -*- Makefile -*-

xtddir = $(includedir)/xtd

# FIXME: To be filled.
nobase_xtd_HEADERS = 				\
  arg.hh					\
  args.hh					\
  bind.hh					\
  cast.hh					\
  cfun.hh					\
  literal.hh					\
  math.hh					\
  mexpr.hh					\
  mfun.hh					\
  optraits.hh					\
  res.hh					\
  traits.hh					\
						\
  abstract/fun.hh				\
  abstract/fun_expr.hh				\
  abstract/fun_nary_expr.hh			\
  abstract/meta_fun.hh				\
  abstract/meta_nary_fun.hh			\
  abstract/nary_fun.hh				\
  abstract/open_fun.hh				\
  abstract/open_nary_fun.hh			\
  abstract/plain_fun.hh				\
  abstract/plain_nary_fun.hh			\
						\
  builtin/traits.hh				\
						\
  internal/mlc.hh				\
  internal/opmacros.hh				\
						\
  math/abs.hh					\
  math/acos.hh					\
  math/arith.hh					\
  math/asin.hh					\
  math/atan.hh					\
  math/atan2.hh					\
  math/ceil.hh					\
  math/cmp.hh					\
  math/constraints.hh				\
  math/cos.hh					\
  math/cosh.hh					\
  math/exp.hh					\
  math/floor.hh					\
  math/id.hh					\
  math/includes.hh				\
  math/log.hh					\
  math/log10.hh					\
  math/logic.hh					\
  math/pow.hh					\
  math/sin.hh					\
  math/sinh.hh					\
  math/sqrt.hh					\
  math/tan.hh					\
  math/tanh.hh
