## Process this file through Automake to create Makefile.in -*- Makefile -*-

mlcdir = $(includedir)/mlc
nobase_mlc_HEADERS = 				\
  bool.hh					\
  case.hh					\
  cmp.hh					\
  comma.hh					\
  elt.hh					\
  flags.hh					\
  if.hh						\
  implies.hh					\
  is_a.hh					\
  logic.hh					\
  pair.hh					\
  ret.hh					\
  to_string.hh					\
  type.hh					\
  typedef.hh					\
  uint.hh					\
  valist.hh					\
  value.hh					\
  wrap.hh
