## Process this file through Automake to create Makefile.in -*- Makefile -*-

mlcdir = $(includedir)/mlc

nobase_mlc_HEADERS =				\
  abort.hh 					\
  assert.hh					\
  bexpr.hh					\
  bool.hh					\
  case.hh					\
  char.hh					\
  cmp.hh					\
  comma.hh					\
  contract.hh					\
  elt.hh					\
  flags.hh					\
  if.hh						\
  implies.hh					\
  int.hh					\
  is_a.hh					\
  logic.hh					\
  pair.hh					\
  ret.hh					\
  switch.hh					\
  to_string.hh					\
  typedef.hh					\
  uint.hh					\
  valist.hh					\
  value.hh					\
  values.hh					\
  wrap.hh					\
						\
  abstract/bexpr.hh				\
  abstract/type.hh
